dwc: Release resources when attach fails

PR:	259282
MFC after:	1 week
Sponsored by:	Beckhoff Automation GmbH & Co. KG